# YouTubeConnoisseur

./: .replit  INSTALL.md  README.md  client_secret_1911968826-ch6c77gbacv8jc2bmie7b7qa9529o8ld.apps.googleusercontent.com.json  main.py  pyproject.toml  replit.nix  requirements.txt  test.py
templates/: index.html  results.html
