[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
openai = "^0.27.4"
xds-protos = "^0.0.11"
youtube-transcript-api = "^0.5.0"
google-api-python-client = "^2.85.0"
bs4 = "^0.0.1"
google-auth-oauthlib = "^1.0.0"
langdetect = "^1.0.9"
tiktoken = "^0.3.3"
Flask-SocketIO = "^5.3.3"
sentence-transformers = "^2.2.2"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"